Modified folder structure from recipes -> pages

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="./recipes/chicken-parmesan.html">Chicken Parmesan</a></li>
-      <li><a href="./recipes/simple-raisin-pie.html">Simple Raisin Pie</a></li>
-      <li><a href="./recipes/broccoli-cheese.html">Quick and Simple Broccoli and Cheese</a></li>
+      <li><a href="./pages/chicken-parmesan.html">Chicken Parmesan</a></li>
+      <li><a href="./pages/simple-raisin-pie.html">Simple Raisin Pie</a></li>
+      <li><a href="./pages/broccoli-cheese.html">Quick and Simple Broccoli and Cheese</a></li>
     </ul>
   </body>
 </html>
