Include gif in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <img src="./img/fox-licking-window.gif" alt="Fox licking window">
+
     <ul>
       <li><a href="./pages/chicken-parmesan.html">Chicken Parmesan</a></li>
       <li><a href="./pages/simple-raisin-pie.html">Simple Raisin Pie</a></li>
